--- a/index.html
+++ b/index.html
@@ -6,63 +6,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luis Alejandro Machado Orozco</title>
     <!--Style-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/main.css">
     <!--Font Style-->
+    <link href='https://fonts.googleapis.com/css?family=Raleway:800' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lora:400italic' rel='stylesheet' type='text/css'>
+
+    <!--link-->
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 </head>
 <body>
     <main>
         <header>
-            <!--NAVBAR NUEVA-->
-            <nav>
-                <div class="logo">
-                    <a href="#">Logo</a>
+            <!--NAVBAR-->
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="#">Luis Alejandro</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" href="#about">About</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" href="#contact">Contact</a>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
-                <ul class="menu">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-                <div class="burger">
-                    <div class="line"></div>
-                    <div class="line"></div>
-                    <div class="line"></div>
-                </div>
-            </nav>
-            <!--hasta aqui-->
-            <!--<nav>
-                <ul class="nav-bar">
-                    <a href=""><li>Home</li></a>
-                    <a href="#about"><li>Sobre mi</li></a>
-                    <a href="#contact"><li>Contacto</li></a>
-                </ul>
-            </nav>
-            -->
+              </nav>
         </header>
         <!--FOTO y TITULO-->
         <section class="nombre-titulo">
             <picture class="miFoto">
                 <img class="fotoMe" src="./img/FotoMe.jpg" alt="foto">
             </picture>
-
         </section>
-        <section class="titulo-name">
-            <h1 id="name"></h1>
-            <h2 id="title"></h2>
+        <section class="titulo-name nf">
+            <h1 id="name" class="nf-r1"></h1>
+            <h2 id="title" class="nf-r2"></h2>
         </section>
         <!--Descripcion-->
         <section class="about">
             <h2 id="about"></h2>
             <p id="description"></p>
-            <a class="descargar" href="https://github.com/Luisalejandro28">Descargar CV</a>
+            <div class="boton">
+                <a href="#" class="button">
+                    <span>Descargar CV</span>
+                </a>
+            </div>
         </section>
         <!--Hablemos-->
         <article id="talk" class="talk1">
-            <h3>Hablemos</h3>
-            <p>Hablemos sobre cómo puedo aplicar mis habilidades en desarrollo web para impulsar tu proyecto o negocio. Como desarrollador web en formación, tengo experiencia en HTML, CSS y JavaScript, y estoy motivado para seguir mejorando mis habilidades y aprender cosas nuevas. Si buscas un colaborador proactivo y enfocado en resultados</p>
+            <div>
+                <div>
+                    <h3 class="nf-r2">Hablemos</h3>
+                    <p>Hablemos sobre cómo puedo aplicar mis habilidades en desarrollo web para impulsar tu proyecto o negocio. Como desarrollador web en formación, tengo experiencia en HTML, CSS y JavaScript, y estoy motivado para seguir mejorando mis habilidades y aprender cosas nuevas. Si buscas un colaborador proactivo y enfocado en resultados</p>
+                </div>
+            </div>
         </article>
         <!--Extras-->
         <section id="extra" class="extra1">
-            <h3>Extra laboral y Hobby</h3>
+            <h3 class="nf-r2">Extra laboral y Hobby</h3>
             <ul>
                 <li>Gamer</li>
                 <li>Servicios de logistica y envios</li>
@@ -89,10 +99,9 @@
 
     </main>
     <script src="./javascript/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
 
 
-
-
+  
