--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <article id="talk" class="talk1">
             <div>
                 <div>
+
                     <h3 class="nf-r2">Hablemos</h3>
                     <p>Hablemos sobre cómo puedo aplicar mis habilidades en desarrollo web para impulsar tu proyecto o negocio. Como desarrollador web en formación, tengo experiencia en HTML, CSS y JavaScript, y estoy motivado para seguir mejorando mis habilidades y aprender cosas nuevas. Si buscas un colaborador proactivo y enfocado en resultados</p>
                 </div>
@@ -83,7 +84,7 @@
             <h3 class="titulo-contacto">Contacto</h3>
             <div class="contact1">
                 <a href="https://wa.me/5491123535703"><img class="icon" src="./img/whatsapp.svg" alt="img"><h4>Whatsapp</h4></a>
-                <a href=""><img class="icon" src="./img/gmail.svg" alt="img"><h4>Correo Electronico</h4></a>
+                <a href="mailto:luisalejandro.coder@gmail.com"><img class="icon" src="./img/gmail.svg" alt="img"><h4>Correo Electronico</h4></a>
             </div>
         </section>
         <!--Footer-->
