--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" href="#about">About</a>
+                        <a class="nav-link active" href="#about">Sobre Mi</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" href="#contact">Contact</a>
+                        <a class="nav-link active" href="#contact">Contacto</a>
                       </li>
                     </ul>
                   </div>
